k8s-001/k8s/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
  labels:
    app: backend-api
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: backend-api
    tier: backend
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  sessionAffinity: None
