k8s-001/k8s/backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.kn-tech.click
    secretName: api-kn-tech-click-tls
  rules:
  - host: api.kn-tech.click
    http:
      paths:
      - path: /(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-api-service
            port:
              number: 8080
